--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://andreibotezan.github.io/goit-js-hw-08/"
+    "url": "git+https://andreibotezan.github.io/goit-js-hw-08"
   },
   "keywords": [],
   "author": "Andrei Botezan",
