--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "goit-js-hw-08",
   "version": "1.0.0",
   "description": "(https://parceljs.org/).",
-  "homepage": "https://andreibotezan.github.io/goit-js-hw-08",
+  "homepage": "https://andreibotezan.github.io/goit-js-hw-08/",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /goit-js-hw-08/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://andreibotezan.github.io/goit-js-hw-08"
+    "url": "git+https://andreibotezan.github.io/goit-js-hw-08/"
   },
   "keywords": [],
   "author": "Andrei Botezan",
